--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
                     <div class="navbar-links">
                         <ul>
                             <li>
-                                <a href="">
+                                <a href="" class="navbar-link-item">
                                     Galería
                                 </a>
                             </li>
                             <li>
-                                <a href="">
+                                <a href="" class="navbar-link-item">
                                     Explora
                                 </a>
                             </li>
                             <li>
-                                <a href="">
+                                <a href="" class="navbar-link-item">
                                     Reservar
                                 </a>
                             </li>
