Aplicando cambios en el header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <title>HWS</title>
 </head>
 <body>
@@ -43,12 +43,13 @@
                 </svg>
             </nav>
             <div class="main-window">
+                <div class="vertical-container-margin"></div>
                 <div class="vertical-bar"></div>
                 <div class="top-title">
                     <h2>HWS</h2>
                 </div>
                 <div class="inside-screen">
-
+                        
                     <!-- MAIN TITLE -->
 
                     <div class="main-title">
@@ -63,9 +64,9 @@
 
                     <!-- SEARCHER -->
 
-                    <div class="searcher">
-                        <input type="search" name="searcher" id="searcher">
-                        <input type="submit" value="">
+                    <div class="searcher-container">
+                        <input type="search" name="searcher" class="searcher" id="searcher" placeholder="Greece, Flower Street">
+                        <input type="submit" value="" class="submit" id="submit">
                     </div>
 
                     <!-- SCROLL -->
@@ -75,7 +76,7 @@
                         <div class="white-bar"></div>
                         <div class="black-bar"></div>
                     </div>
-                </div>
+                    </div>
 
                 <!-- SOCIAL MEDIA -->
 
