--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <title>HWS</title>
 </head>
 <body>
     <div class="main">
         <header>
             <nav id="navbar">
-                <div class="navbar-items" id="navbar-items">
+                <div class="nav navbar-items" id="navbar-items">
                     <div class="logo">
                         <h2>HWS</h2>
                     </div>
@@ -114,6 +115,22 @@
                 </div>
             </div>
         </header>
+        <div class="explore-section">
+            <div class="main-window">
+                <div class="explore-container">
+                    <div class="gallery-container" id="gallery-container">
+                        <div class="image-container">
+                            <div class="titles-container">
+                                <h3>Nice views.</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis risus elit. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+                            </div>
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                    <div class="bottom-bar"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="animations.js"></script>
 </body>
