--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <title>HWS</title>
 </head>
 <body>
     <div class="main">
+        <div class="vertical-white-margin"></div>
+        <div class="vertical-white-margin2"></div>
         <header>
             <nav id="navbar">
                 <div class="nav navbar-items" id="navbar-items">
@@ -44,7 +47,6 @@
                 </svg>
             </nav>
             <div class="main-window">
-                <div class="vertical-container-margin"></div>
                 <div class="vertical-bar-left">
                     <svg width="1" height="566" viewBox="0 0 1 566" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <line x1="0.5" y1="2.18557e-08" x2="0.499975" y2="566.001" stroke="black"/>
@@ -115,23 +117,55 @@
                 </div>
             </div>
         </header>
-        <div class="explore-section">
-            <div class="main-window">
-                <div class="explore-container">
-                    <div class="gallery-container" id="gallery-container">
-                        <div class="image-container">
-                            <div class="titles-container">
-                                <h3>Nice views.</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis risus elit. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-                            </div>
-                            <img src="" alt="">
-                        </div>
+        <div class="explore-container">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div class="carousel-inner h-500">
+                  <div class="carousel-item active">
+                    <img src="img/carousel1.jpg" class="d-block w-100" alt="1">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/carousel2.jpg" class="d-block w-100" alt="2">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="img/carousel3.jpg" class="d-block w-100" alt="3">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </div>
+        <div class="visits-container">
+            <div class="main-window-visits">
+                <div class="visits-content">
+                    <div class="image-visits">
+                        <img src="img/visits-image.jpg" alt="">
                     </div>
-                    <div class="bottom-bar"></div>
+                    <div class="text-visits">
+                        <h2>Disfruta de nuestras visitas guiadas.</h2>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="reserve-section">
+            <div class="main-window-visits">
+                <div class="title-visits">
+                    <h2 id="title-visit">RESERVA TU HABITACIÓN</h2>
+                </div>
+                <div class="circle circle1"></div>
+                <div class="circle circle2"></div>
+                <div class="circle circle3"></div>
+            </div>
+        </div>
+        <footer></footer>
     </div>
     <script src="animations.js"></script>
+    <script src="bootstrap-5.1.3-dist/js/bootstrap.bundle.js"></script>
+    <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
