--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </button>
               </div>
         </div>
-        <div class="visits-container">
+        <div class="visits-container" id="visits-container-father">
             <div class="main-window-visits" id="visits-container">
                 <div class="visits-content" id="visits-content">
                     <div class="image-visits">
@@ -155,7 +155,9 @@
         <div class="reserve-section">
             <div class="main-window-visits" id="main-window-reserve">
                 <div class="title-visits">
-                    <h2 id="title-reserve">RESERVA TU HABITACIÓN</h2>
+                    <a href="reserve/reserve.html">
+                        <h2 id="title-reserve">RESERVA TU HABITACIÓN</h2>
+                    </a>
                 </div>
                 <div class="circle circle1"></div>
                 <div class="circle circle2"></div>
