--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                     <div class="navbar-links">
                         <ul>
                             <li>
-                                <a href="" class="navbar-link-item">
+                                <a href="#explore-container" class="navbar-link-item">
                                     Galería
                                 </a>
                             </li>
                             <li>
-                                <a href="" class="navbar-link-item">
+                                <a href="#visits-container-father" class="navbar-link-item">
                                     Explora
                                 </a>
                             </li>
